# Arborration

./: Arborration.py  Arborration_Benchmarking.ipynb  README.md  inspiration_code.txt  pyproject.toml  requirements.txt
benchmarking/: Arborration_Benchmarking.ipynb  OpenML_Arborration_Regression_Permutation_Benchmark.ipynb
src/arborration/: __init__.py  __main__.py  classifiers.py  feature_selection.py
tests/: test_feature_selection_permutation.py  test_imports.py
