[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arborration"
version = "0.1.0"
description = "Tree-based generative classifiers built on anomaly-detection forests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scikit-learn",
  "coniferest",
  "isotree",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
